--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,29 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["es2017", "es2015", "dom", "es6", "esnext.asynciterable"],
     "module": "commonjs",
-    "outDir": "./dist",
-    "sourceMap": false,
-    "strict": true,
+    "lib": [
+      "dom",
+      "es5",
+      "es2015.core",
+      "es2015.collection",
+      "es2015.iterable",
+      "es2016.array.include" // Supported by Node 6+
+    ],
+    "target": "es2015",
+    "noImplicitAny": false,
+    "downlevelIteration": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "removeComments": true,
+    "preserveConstEnums": true,
+    "declaration": true,
+    "sourceMap": true,
+    "inlineSources": true, // Required for debugging NPM published package.
+    "outDir": "dist/",
+    "rootDir": "src/",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "noImplicitAny": false
+    "newLine": "LF"
   },
   "include": ["./src/**/*.ts"],
   "exclude": ["node_modules"]
